# GEMpRF-Assistant

./: .gitignore  .gitmodules  README.md  app.py  pyproject.toml  run.sh
datasets/: code_eval_qa.jsonl  configurator_what_if_qa.jsonl  eval_review_full_404.md  paper_eval_qa.jsonl  paper_eval_results_full.json  paper_eval_results_full.json.partial.jsonl  paper_eval_results_full.json.review.md  paper_eval_results_full.summary.md  website_xml_config_qa.jsonl  whatif_refusal_probe.jsonl
datasets/main_test/: main_test.jsonl
deploy/: .env.example  Caddyfile  Dockerfile  README.md  docker-compose.yml
docs/: PERFORMANCE.md
results/: answers_404.json  current_answers.md  current_evals.json  eval_e5_retry.json
scripts/: eval_clarification_nonleaky.py  eval_paper_rag.py  generate_code_fallback.py  ingest.py
src/gemprf_assistant/: __init__.py  clarification.py  cli.py  config.py  conversation.py  embeddings.py  evaluation.py  knowledge_base.py  llm.py  models.py  observability.py  paths.py  preflight.py  server.py  snapshot.py  tracing.py
src/gemprf_assistant/kb/: __init__.py  code_index.py  ingest.py  knowledge_graph.py  loader.py  manifest.py  snapshot.py
src/gemprf_assistant/kb/corpus/: code_entities.json  parameters.yaml  sources.yaml
src/gemprf_assistant/kb/corpus/grounding/: 001-paper-abstract.md  002-website-quickstart.md  003-paper-full.md  004-paper-full.md  005-website-running.md  006-website-configuration.md  007-website-installation.md  008-website-input-sources.md  009-website-config-generator.md  010-website-config-generator.md  011-website-config-generator.md  012-website-config-generator.md  013-website-config-generator.md  014-website-config-generator.md  015-website-config-generator.md  016-website-config-generator.md  017-website-config-generator.md  018-paper-full.md  019-paper-full.md  021-paper-full.md  (+47 more)
src/gemprf_assistant/pipeline/: __init__.py  assemble.py  clarify.py  engine.py  fallbacks.py  generate.py  parameter_relations.py  parameters.py  rerank.py  retrieval.py  rewrite.py
src/gemprf_assistant/providers/: __init__.py  embeddings.py  llm.py
src/gemprf_assistant/rag/: __init__.py  augment.py  chunking.py  engine.py  knowledge_graph.py  parameter_relations.py  parameters.py  prompts.py  rerank.py  retrieval.py  vector_store.py
src/gemprf_assistant/store/: __init__.py
