[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GEMpRF-Assistant"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0",
  "langchain>=0.3",
  "langchain-openai>=0.3",
  "pydantic>=2.7",
  "rdflib>=7.0",
  "sentence-transformers>=3.0",
  "weaviate-client>=4.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
eval = [
  "ragas>=0.2,<0.3",
]

[project.scripts]
gemprf-assistant = "gemprf_assistant.cli:main"
gemprf-ask = "gemprf_assistant.cli:ask_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
