[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GEMpRF-Assistant"
version = "0.2.0"
description = "Corpus-grounded RAG assistant for the GEM-pRF population receptive field modeling tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0",
  "langchain>=0.3",
  "langchain-openai>=0.3",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rdflib>=7.0",
  "sentence-transformers>=3.0",
  "weaviate-client>=4.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]
eval = [
  "ragas>=0.2,<0.3",
]
trace = [
  "langfuse>=4,<5",
]

[project.scripts]
gemprf-assistant = "gemprf_assistant.cli:main"
gemprf-ask = "gemprf_assistant.cli:ask_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gemprf_assistant = ["kb/corpus/*.yaml", "kb/corpus/grounding/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: needs Weaviate index, local models, or a live LLM",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E501: bulk of the corpus still lives as long prose literals; re-enable after the
# Phase-4 knowledge-base externalization.
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true
